sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var Int:ecart = getNombreValeurs();
	
}
